<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AIT AI Therapist</string>
    <string name="personalise_your_mental_with_ai">Personalise Your Mental With AI</string>
    <string name="mood_tracking">Mood Tracking</string>
    <string name="ai_emotion_insights">AI Emotion Insights</string>
    <string name="what_makes_you_happy">What Makes You Happy</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_for_free">Sign Up for Free</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="what_is_your_health_goal">What\'s your health goal?</string>
    <string name="what_is_your_official_gender">What\'s your official gender?</string>
    <string name="what_is_your_age">What\'s your age?</string>
    <string name="what_is_your_weight">What\'s your weight?</string>
    <string name="how_would_you_describe_your_mood">How would you describe your mood?</string>
    <string name="have_you_sought_professional_help_before">Have you sought professional help before?</string>
    <string name="are_you_experiencing_any_physical_distress">Are you experiencing any physical distress?</string>
    <string name="how_would_you_rate_your_sleep_quality">How would you rate your sleep quality?</string>
    <string name="are_you_taking_any_medications">Are you taking any medications?</string>
    <string name="how_would_you_describe_your_diet">How would you describe your diet?</string>
    <string name="do_you_have_other_mental_health_symptoms">Do you have other mental health symptoms?</string>
    <string name="how_would_you_rate_your_stress_level">How would you rate your stress level?</string>
    <string name="need_your_help">I need your help</string>
    <string name="checkout_your_recent_performance">Checkout your recent performance</string>
    <string name="weekly_report">Weekly Report</string>
    <string name="monthly_report">Monthly Report</string>
    <string name="here_are_the_resources_tailored_for_you">Here\'re the resources tailored for you</string>
    <string name="mindfulness">Mindfulness</string>
    <string name="loading">Loading</string>
    <string name="sound_analysis">Sound Analysis</string>
    <string name="expression_analysis">Expression Analysis</string>
    <string name="how_would_you_like_to_interact_with_the_ait">How would you like to interact with the AIT?</string>
    <string name="want_jump">Want Jump</string>
    <string name="hi_chan">Hi Chan!</string>
    <string name="title_activity_get_started">GetStartedActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="get_started">Get Started →</string>
    <string name="mindful_ai_companion_illustration">Mindful AI companion illustration</string>
    <string name="first_screen">AIT</string>
    <string name="ai_therapist">AI Therapist</string>
    <string name="welcome_to_AIT_ai_therapist">welcome to AIT_ai therapist</string>
    <string name="get_started_singin">get started singin</string>
    <string name="abstract_illustration">Abstract illustration</string>
    <string name="personalize_your_mental_nhealth_state_with_ai">Personalize Your Mental\nHealth State With AI</string>
    <string name="arrow1">→</string>
    <string name="Intelligent_Mood_Tracking_And_Al_Emotion_Insights"><![CDATA[Intelligent Mood Tracking\n& Al Emotion Insights]]></string>
    <string name="Mindful_Resources_That_Makes_You_Happy">Mindful Resources That\nMakes You Happy</string>

    <string name="AIT_ai_therapist">AIT ai therapist</string>
    <string name="email_address">email address</string>
    <string name="email_hint">asbcd@gmail.com</string>
    <string name="password">Password</string>
    <string name="passwordenter">Enter your password</string>
    <string name="don_t_have_an_account">Don\'t have an account? Sign up</string>
    <string name="sign_in_arrow">Sign In</string>
    <string name="already_have_an_account">already have an account Sign in?</string>
    <string name="sign_up_arrow">Sign Up</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="password_confirmation_hint">Confirm your paswword...</string>
    <string name="password_hint">Enter your password</string>
    <string name="assessment_title">Assessment</string>
    <string name="what_s_your_health_goal">What\'s your health goal?</string>
    <string name="reduce_stress">I wanna reduce stress</string>
    <string name="try_cuhk_ai_therapy">I wanna try AIT AI Therapy</string>
    <string name="try_AIT_ai_therapy">I wanna try AIT AI Theropy</string>
    <string name="cope_with_trauma">I want to cope with trauma</string>
    <string name="be_a_better_person">I want to be a better person</string>
    <string name="just_trying_out_the_app">Just trying out the app. mate!</string>
    <string name="continue_button">Continue</string>
    <string name="back_button_description">back1</string>
    <string name="what_s_your_official_gender">What\'s your official gender?</string>
    <string name="i_am_male">I am Male</string>
    <string name="i_am_female">I am Female</string>
    <string name="continue_button_arrow">Continue</string>
    <string name="prefer_to_skip_thanks">Prefer to skip.thanks</string>
    <string name="what_s_your_age">what\'s your age?</string>
    <string name="social_withdrawl">Social Withdrawl</string>
    <string name="feeling_numbness">Feeling Numbness</string>
    <string name="depressed">Feeling Sad</string>
    <string name="_3_10">3/10</string>
    <string name="TextView">Depresse</string>
    <string name="you_are_extremely_stressed_out">You Are Exremely Stressed Out</string>
    <string name="ai_therapist_chat">AI Therapist Chat</string>
    <string name="network_ok">Network OK</string>
    <string name="hinted_search_text">"Search "</string>
    <string name="speech_to_speech">Speech to Speech</string>
    <string name="ready">Ready</string>
    <string name="hi_jerry">Hi Jerry How\'s your day?</string>
    <string name="customize_ai">Customize AI</string>
    <string name="device_sound_is_on">Device Souncd is On</string>
    <string name="device_recording_is_on">Device Recording is On</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="analytics">Analytics</string>
    <string name="low">Low</string>
    <string name="resources">Resources</string>
    <string name="verified">verified</string>
    <string name="medication">Medication</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="color_theme">Color Theme</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="font_size">Font Size</string>
    <string name="ai_sound_volume">AI Sound Volume</string>
    <string name="high_resolution_ai">High Resolution AI</string>
    <string name="this_is_increase_your_battery_consumption">#This is increase your battery consumption</string>
    <string name="cuhk_ai_therapist_is_here_with_you">AIT AI Therapist is here with you</string>
    <string name="view_more">View More...</string>
    <string name="what_makes_your_week">What makes your week?</string>
    <string name="schedule_for_the_week">Schedule for the week ...</string>
    <string name="meeting_illustration">Meeting illustration</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="flag_icon">Flag icon</string>
    <string name="jerry_chan_AIT_edu_hk">jerry.chan@cuhk.edu.hk</string>
    <string name="log_out">Log Out</string>
    <string name="back_button">Back button</string>
    <string name="heart_icon">Heart icon</string>
    <string name="settingsflag">Flag icon</string>
    <string name="lamp_icon">Lamp icon</string>
</resources>
